--- a/Vue/Instagram App/Instagram/package.json
+++ b/Vue/Instagram App/Instagram/package.json
@@ -13,6 +13,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.20.0",
     "ant-design-vue": "^3.2.17",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
